completed apis for issue description view

--- a/frontend/demoClient1.html
+++ b/frontend/demoClient1.html
@@ -10,10 +10,10 @@
 
 
     <script src="./jquery.min.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="http://localhost:3000/socket.io/socket.io.js"></script>
     <script>
     const socket=io('http://localhost:3000')
-let userId='106618984403917733636'
+let userId='DHvRE6KW'
 socket.on(userId,(info)=>{
     console.log('received notification',info);
     
