--- a/backend/clientSide/demoClient.html
+++ b/backend/clientSide/demoClient.html
@@ -4,7 +4,7 @@
     </head>
 <body>
     <button>
-        <a href="http://localhost:3000/auth/facebook">login via fb</a>
+        <a href="http://localhost:3000/api/v1/app/auth/facebook">login via fb</a>
         <a href="http://localhost:3000/auth/google">login via google</a>
     </button>
 
